<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscriptionActivity">

    <Switch
        android:id="@+id/sub_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_button_caption"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/news_publisher_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:text="@string/news_publisher_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sub_button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/news_publisher_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_publisher_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sub_button_2"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_publisher_1"
        app:layout_constraintVertical_bias="0.1" />

    <Switch
        android:id="@+id/sub_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_button_caption"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/sub_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />
</androidx.constraintlayout.widget.ConstraintLayout>